<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.profile.editDialog.EditUniversityAffliationFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/enter_your_universityname_set"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/university_name"
                android:hint="@string/enter_your_name"
                android:inputType="textWebEmailAddress|textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <Spinner
                android:id="@+id/study_level_settings"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/study_level_name"
                android:hint="@string/study_level"
                android:inputType="textPersonName|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/departement_settings"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/departement_name"
                android:hint="@string/department"
                android:inputType="textPersonName|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:spinnerMode="dropdown"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center"
                android:paddingHorizontal="20sp"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="#F3EBEB"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>