<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.clubs.CreateNewClubFormFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/email"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/id"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:paddingHorizontal="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_your_id"
                android:inputType="number|textPersonName"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#FA0A090B"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email"
                tools:ignore="TextFields" />


            <Spinner
                android:id="@+id/enter_your_universityname_set"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/university_name"
                android:hint="@string/enter_your_name"
                android:inputType="textWebEmailAddress|textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <Spinner
                android:id="@+id/study_level_settings"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/study_level_name"
                android:hint="@string/study_level"
                android:inputType="textPersonName|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/departement_settings"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/departement_name"
                android:hint="@string/department"
                android:inputType="textPersonName|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:spinnerMode="dropdown"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/club_name"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_club_s_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields" />

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/common_google_signin_btn_text_dark" />
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="5dp"
                        android:paddingHorizontal="16dp"
                        android:text="Enter Club Logo"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>






            <TextView
                android:id="@+id/button_for_save_basic_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:contextClickable="true"
                android:ems="10"
                android:freezesText="true"
                android:gravity="center"
                android:onClick="saveProfile"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="#F3EBEB"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
