<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color"
        tools:context=".fragment.createEvent.CreateEventDialogueFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_background_color"
                android:elevation="4dp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Create Event" />

            <Spinner
                android:id="@+id/university_name"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:entries="@array/university_name"
                android:hint="@string/enter_your_name"
                android:inputType="textWebEmailAddress|textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="bold"
                tools:ignore="TextFields" />


            <EditText
                android:id="@+id/event_name"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_event_s_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/university_name"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/date"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="@string/birthdate"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/please_enter_date"
                android:inputType="textPersonName|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#FA0A090B"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/event_name"
                tools:ignore="HardcodedText" />


            <EditText
                android:id="@+id/details"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="@string/birthdate"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="Please Enter Event's Details"
                android:inputType="textLongMessage|textPersonName|textImeMultiLine|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#FA0A090B"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time" />


            <EditText
                android:id="@+id/imageLink"
                style="Port Lligat Slab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="@string/birthdate"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="Please Event Banner Link"
                android:inputType="textLongMessage|textPersonName|textImeMultiLine|textCapWords"
                android:paddingHorizontal="20sp"
                android:shadowDx="30"
                android:shadowDy="30"
                android:shadowRadius="50"
                android:textAlignment="viewStart"
                android:textColor="#FA0A090B"
                android:textColorHint="#444444"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time" />


            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:contextClickable="true"
                android:ems="10"
                android:freezesText="true"
                android:gravity="center"
                android:onClick="saveProfile"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="#F3EBEB"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/details" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>